Filter the home map based on the table filter.  Tombstone, menu cleanup.

--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -10,11 +10,7 @@
 		<ul class="list-unstyled">
 			<li><a href ui-sref="activities">My List</a></li>
 		</ul>
-		<hr>
-<!-- 		<ul class="list-unstyled">
-			<li><a ui-sref="p.edit({projectid:'new'})">Add Project</a></li>
-		</ul>
- -->	</div>
+	</div>
 
 	<!-- Common on all pages Not Logged In -->
 	<div ng-show="!menu.authentication.user">
@@ -36,6 +32,7 @@
 
 
 	<div ng-if="(menu.context === 'projects' || menu.context === 'mylist') && menu.projectsMenu.shouldRender(menu.authentication.user);">
+		<hr>
 		<ul class="list-unstyled">
 			<li ng-repeat="item in menu.projectsMenu.items | orderBy: 'position'" ng-if="item.shouldRender(menu.authentication.user);" ng-class="{ active: $state.includes(item.state) }" class="{{item.class}}">
 				<a ui-sref="{{item.state}}" ng-bind="item.title"></a>
