--- a/modules/projects/client/views/projects-partials/projects-list.html
+++ b/modules/projects/client/views/projects-partials/projects-list.html
@@ -6,18 +6,52 @@
 	</div>
 	<table x-show-filter="toggleFilter" ng-table="projectList.tableParams" class="table table-condensed table-striped">
 		<tr ng-repeat="o in $data" class='clickable' ui-sref="p.detail({projectid: o.code})">
-			<td data-title="'Name'"     filter="{'name':'text'}"     			sortable="'name'"   >{{o.name}}</td>
-			<td ng-if="environment === 'MEM'" title="'data-Permit'"   filter="{'memPermitID':'text'}" filter-data="projectList.memPermitID"  			sortable="'memPermitID'" >{{o.memPermitID}}</td>
-			<td data-title="'Type'"     filter="{'type':'select'}" filter-data="projectList.types"    			sortable="'type'"   >{{o.type}}</td>
-			<td data-title="'Region'"   filter="{'region':'text'}"   			sortable="'region'" >{{o.region | regionName}}</td>
-			<td data-title="'Phase'"    filter="{'currentPhase.name':'text'}"   	sortable="'currentPhase.name'" >{{o.currentPhase.name}}</td>
-			<td ng-if="environment === 'EAO'" data-title="'Status'"   filter="{'status':'select'}" filter-data="projectList.status"  			sortable="'status'" >{{o.status}}</td>
+			<td data-title="'Name'"
+				filter="{'name':'text'}"
+				sortable="'name'">
+				{{o.name}}
+			</td>
+
+			<td ng-if="environment === 'MEM'"
+				title="'data-Permit'"
+				filter="{'memPermitID':'text'}"
+				sortable="'memPermitID'">
+				{{o.memPermitID}}
+			</td>
+			
+			<td data-title="'Type'"
+				filter="{type:'select'}"
+				filter-data="projectList.typeArray"
+				sortable="'type'">
+				{{o.type}}
+			</td>
+			
+			<td data-title="'Region'"
+				filter="{region:'select'}"
+				filter-data="projectList.regionArray"
+				sortable="'region'">
+				{{o.region | regionName}}
+			</td>
+
+			<td data-title="'Phase'"
+				filter="{'currentPhase.name':'text'}"
+				sortable="'currentPhase.name'" >
+				{{o.currentPhase.name}}
+			</td>
+
+			<td ng-if="environment === 'EAO'"
+				data-title="'Status'"
+				filter="{status:'select'}"
+				filter-data="projectList.statusArray"
+				sortable="'status'">
+				{{o.status}}
+			</td>
 		</tr>
 		<tr ng-show="!$data || !$data.length" class="text-center">
 			<td ng-if="environment === 'EAO'" colspan="5">No results match your search.</td>
 			<td ng-if="environment === 'MEM'" colspan="4">No results match your search.</td>
 		</tr>
 	</table>
-
+{{ projectList.statusArray }}
 </section>
 
