--- a/modules/artifacts/client/views/artifact-executive.html
+++ b/modules/artifacts/client/views/artifact-executive.html
@@ -1,5 +1,5 @@
 <h1 class="page-title">
-	Executive Approval of {{artifact.type.type}} ({{artifact.version}}) for {{ project.name }}
+	Executive Approval of {{artifact.name}} ({{artifact.version}}) for {{ project.name }}
 </h1>
 
 <div ng-include="'modules/artifacts/client/views/partial.artifact-view.html'"></div>
