--- a/modules/artifacts/client/views/artifact-review.html
+++ b/modules/artifacts/client/views/artifact-review.html
@@ -1,5 +1,5 @@
 <h1 class="page-title">
-	Review {{artifact.type.type}} ({{artifact.version}}) for {{ project.name }}
+	Review {{artifact.name}} ({{artifact.version}}) for {{ project.name }}
 </h1>
 
 <div class="text-right">
