--- a/modules/artifacts/client/views/artifact-approve.html
+++ b/modules/artifacts/client/views/artifact-approve.html
@@ -1,5 +1,5 @@
 <h1 class="page-title">
-	Approve {{artifact.type.type}} ({{artifact.version}}) for {{ project.name }}
+	Approve {{artifact.name}} ({{artifact.version}}) for {{ project.name }}
 </h1>
 
 <div class="text-right">
@@ -18,7 +18,6 @@
 		<div class="text-right">
 			<a class="btn btn-default" ui-sref="p.detail">Cancel</a>
 			<a class="btn btn-default" ng-click="reject()">Reject and Return for {{buttons.prev}}</a>
-			<a class="btn btn-success" ng-click="submit()">Accept for {{buttons.next}}</a>
 			<a class="btn btn-success" ng-click="submit()">Accept for {{buttons.next}}</a>
 		</div>
 	</div>
