--- a/modules/artifacts/client/views/artifact-publish.html
+++ b/modules/artifacts/client/views/artifact-publish.html
@@ -1,5 +1,5 @@
 <h1 class="page-title">
-	Publish {{artifact.type.type}} for {{ project.name }}
+	Publish {{artifact.name}} for {{ project.name }}
 </h1>
 
 <div class="text-right">
