--- a/modules/artifacts/client/views/artifact-view.html
+++ b/modules/artifacts/client/views/artifact-view.html
@@ -1,5 +1,5 @@
 <h1 class="page-title no-lower-margin">
-	{{artifact.type.type}} for {{ project.name }}
+	{{artifact.name}} for {{ project.name }}
 </h1>
 
 <div class="text-right">
