--- a/modules/artifacts/client/views/partial.artifact-edit.html
+++ b/modules/artifacts/client/views/partial.artifact-edit.html
@@ -21,7 +21,7 @@
 		[ no document uploaded yet ]
 		</div>
 		<div ng-if="!artifact.document">
-			<span class="glyphicon glyphicon-file"></span> {{artifact.type.type}} - {{artifact.version}}
+			<span class="glyphicon glyphicon-file"></span> {{artifact.name}} - {{artifact.version}}
 		</div>
 		<div>
 		<small><a href ng-click="docBrowser.toggleDocumentLink( filterSummary )"title="Link">
