--- a/modules/users/client/views/user-partials/user-activities.html
+++ b/modules/users/client/views/user-partials/user-activities.html
@@ -17,9 +17,9 @@
 				<section class="panel panel-default">
 					<table x-show-filter="show_filter" ng-table="tableParams" class="table table-condensed table-striped table-hover">
 						<tr ng-repeat="o in $data | orderBy:'order'"
-							ng-href="{{getLinkUrl(o.state, o.data)}}"
+							ng-click="getLinkUrl(o.state, o.data)"
 							class="clickable">
-							<td data-title="'Project'"  filter="{'project':'text'}" sortable="'project'">{{ o.project }}</td>
+							<td data-title="'Project'"  filter="{'project':'text'}" sortable="'project'"><a ui-sref="p.detail({'projectid':o.projectCode})">{{ o.project }}</a></td>
 							<td data-title="'Name'" filter="{'name':'text'}"    sortable="'name'" >{{o.name}}</td>
 							<td data-title="'Estimated Start'" filter="{'dateStartedEst':'text'}"    sortable="'dateStartedEst'" >{{o.dateStartedEst | date}}</td>
 							<td data-title="'Started On'" filter="{'dateStarted':'text'}"    sortable="'dateStarted'" >{{o.dateStarted | date}}</td>
