--- a/modules/projects/client/views/project-partials/project-tombstone.html
+++ b/modules/projects/client/views/project-partials/project-tombstone.html
@@ -7,7 +7,7 @@
 			<div><label class="control-label">Region</label><p>{{ project.region | regionName }}</p></div>
 		</div>
 		<div class='col-sm-3'>
-			<div><label class="control-label">Estimated Phase Completion</label><p>{{ (project.currentPhase.dateEndedEst | amDateFormat:'MMM Do YYYY') || 'N/A' }}</p></div>
+			<div><label class="control-label">Estimated Phase Completion</label><p>{{ (project.currentPhase.dateCompletedEst | amDateFormat:'MMM Do YYYY') || 'N/A' }}</p></div>
 			<div><label class="control-label">Current Phase</label><p>{{ project.currentPhase.name | titleCase }}</p></div>
 			<!-- <div><label class="control-label">Next Phase</label><p x-phase-colour x-phase="project.nextPhase">{{ project.nextPhase }}</p></div> -->
 		</div>
