--- a/modules/projects/client/views/project-public.html
+++ b/modules/projects/client/views/project-public.html
@@ -141,7 +141,7 @@
 
 				</div>
 
-				<div ng-if="vm.comments.length !== 0 && (vm.project.dateCommentsOpen | isInThePast) && (vm.project.dateCommentsClosed | isInTheFuture)">
+				<div ng-if="::vm.comments.length !== 0 && (vm.project.dateCommentsOpen | isInThePast) && (vm.project.dateCommentsClosed | isInTheFuture)">
 
 					<nav class="navbar navbar-default navbar-sm" ng-init="vm.form.view = 'bydate'" ng-if="vm.comments.length !== 0">
 						<div class="container-fluid">
@@ -174,47 +174,47 @@
 				</div>
 
 
-				<!-- <div ng-repeat="(heading, topic) in vm.commentsByTopicKeys | orderBy:'name' | filter:vm.filterBucketGroup track by $index" class="concern-list" ng-show="vm.form.view === 'bytopic' && vm.comments.length > 0" ng-init="toggleTopicComment[item._id] = false">
+				<div ng-repeat="(heading, topic) in ::vm.commentsByTopicKeys | orderBy:'name' | filter:vm.filterBucketGroup track by $index" class="concern-list" ng-show="vm.form.view === 'bytopic' && vm.comments.length > 0" ng-init="toggleTopicComment[item._id] = false">
 					<h3 ng-click='form[heading] = !form[heading]' class="clickable concern-heading">
-						{{ heading }}<div class="pull-right small"><span ng-if="!form[heading]">Click to view.</span> Number of comments tagged: {{ (vm.commentsByTopic[heading] | filter:vm.filterKeyword).length || 0 }} of {{ vm.comments.length || 0 }} </div>
+						{{ ::heading }}<div class="pull-right small"><span ng-if="!form[heading]">Click to view.</span> Number of comments tagged: {{ (vm.commentsByTopic[heading] | filter:vm.filterKeyword).length || 0 }} of {{ vm.comments.length || 0 }} </div>
 					</h3>
 					<hr ng-if='!form[heading]'>
 					<div class="" ng-show='form[heading]'>
-							<div class="row comment-list" ng-repeat-start="item in vm.commentsByTopic[heading] | advancedFilter:vm.filterKeyword | orderBy:'dateAdded':true track by item._id">
-								<div class="col-sm-9">
-									<pre class="form-group">{{ item.comment | maxWords:80:toggleTopicComment[item._id] }}</pre>
-									<p ng-if="(item.comment | wordCount) > 80">
-										<a href ng-click="toggleTopicComment[item._id] = !toggleTopicComment[item._id]">
-											<span ng-show="!toggleTopicComment[item._id]"><em>More ({{ item.comment | wordCount }} words)</em></span>
-											<span ng-show="toggleTopicComment[item._id]"><em>Less</em></span>
-										</a>
-									</p>
-								</div>
+						<div class="row comment-list" ng-repeat-start="item in ::vm.commentsByTopic[heading] | advancedFilter:vm.filterKeyword | orderBy:'dateAdded':true track by item._id">
+							<div class="col-sm-9">
+								<pre class="form-group">{{ ::item.comment | maxWords:80:toggleTopicComment[item._id] }}</pre>
+								<p ng-if="(item.comment | wordCount) > 80">
+									<a href ng-click="toggleTopicComment[item._id] = !toggleTopicComment[item._id]">
+										<span ng-show="!toggleTopicComment[item._id]"><em>More ({{ ::item.comment | wordCount }} words)</em></span>
+										<span ng-show="toggleTopicComment[item._id]"><em>Less</em></span>
+									</a>
+								</p>
+							</div>
 
 
-								<div class="col-sm-3">
-									<p ng-if="item.author && item.displayName">Name: {{ item.author }}</p>
-									<p ng-if="item.location && item.displayName">Location: {{ item.location }}</p>
-									<p>{{ item.dateAdded | amDateFormat:'MMM Do, YYYY h:mm a'}}</p>
-									<ul class="list-unstyled document-vetting small">
-										<li ng-repeat="doc in item.documents track by doc._id">
-											<a href="/api/commentdocument/{{ doc._id }}/fetch" target="_blank" class="small" ng-if="doc.eaoStatus == 'Published'"><span class="glyphicon glyphicon-file"></span> {{ doc.name }}</a>
-										</li>
+							<div class="col-sm-3">
+								<p ng-if="item.author && item.displayName">Name: {{ ::item.author }}</p>
+								<p ng-if="item.location && item.displayName">Location: {{ ::item.location }}</p>
+								<p>{{ ::item.dateAdded | amDateFormat:'MMM Do, YYYY h:mm a'}}</p>
+								<ul class="list-unstyled document-vetting small">
+									<li ng-repeat="doc in ::item.documents track by doc._id">
+										<a href="/api/commentdocument/{{ doc._id }}/fetch" target="_blank" class="small" ng-if="doc.eaoStatus == 'Published'"><span class="glyphicon glyphicon-file"></span> {{ ::doc.name }}</a>
+									</li>
+								</ul>
+
+								<div class="form-group" ng-show="::item.buckets.length > 0">
+									<label class="control-label">Related Topics</label>
+									<ul class="small">
+										<li ng-repeat="bucket in ::item.buckets track by bucket._id">{{ ::bucket.name }}</li>
 									</ul>
-
-									<div class="form-group" ng-show="item.buckets.length > 0">
-										<label class="control-label">Related Topics</label>
-										<ul class="small">
-											<li ng-repeat="bucket in item.buckets track by bucket._id">{{ bucket.name }}</li>
-										</ul>
-									</div>
-
 								</div>
-
-
 
 							</div>
-							<hr ng-repeat-end>
+
+
+
+						</div>
+						<hr ng-repeat-end>
 					</div>
 
 
@@ -223,7 +223,7 @@
 							No comments match these keywords.
 						</div>
 					</div>
-				</div> -->
+				</div>
 
 <!-- 				<div ng-show="!vm.commentsByTopic && vm.form.view === 'bytopic'">
 					<div class="panel-body">
@@ -237,29 +237,29 @@
 						<div class="row comment-list" ng-repeat-start="item in commentsFiltered = (vm.comments | advancedFilter:vm.filterKeyword) | orderBy:'dateAdded':true track by item._id">
 
 							<div class="col-sm-9">
-								<pre class="form-group">{{ item.comment | maxWords:80:toggleDateComment[item._id] }}</pre>
+								<pre class="form-group">{{ ::item.comment | maxWords:80:toggleDateComment[item._id] }}</pre>
 								<p ng-if="(item.comment | wordCount) > 80">
 									<a href  ng-click="toggleDateComment[item._id] = !toggleDateComment[item._id]">
-										<span ng-show="!toggleDateComment[item._id]"><em>More ({{ item.comment | wordCount }} words)</em></span>
+										<span ng-show="!toggleDateComment[item._id]"><em>More ({{ ::item.comment | wordCount }} words)</em></span>
 										<span ng-show="toggleDateComment[item._id]"><em>Less</em></span>
 									</a>
 								</p>
 							</div>
 
 							<div class="col-sm-3">
-								<p ng-if="item.author && item.displayName">Name: {{ item.author }}</p>
-								<p ng-if="item.location && item.displayName">Location: {{ item.location }}</p>
-								<p>{{ item.dateAdded | amDateFormat:'MMM Do, YYYY h:mm a'}}</p>
+								<p ng-if="item.author && item.displayName">Name: {{ ::item.author }}</p>
+								<p ng-if="item.location && item.displayName">Location: {{ ::item.location }}</p>
+								<p>{{ ::item.dateAdded | amDateFormat:'MMM Do, YYYY h:mm a'}}</p>
 								<ul class="list-unstyled document-vetting small">
 									<li ng-repeat="doc in item.documents track by doc._id">
-										<a href="/api/commentdocument/{{ doc._id }}/fetch" target="_blank" class="small" ng-if="doc.eaoStatus === 'Published'"><span class="glyphicon glyphicon-file"></span> {{ doc.name }}</a>
+										<a href="/api/commentdocument/{{ ::doc._id }}/fetch" target="_blank" class="small" ng-if="doc.eaoStatus === 'Published'"><span class="glyphicon glyphicon-file"></span> {{ ::doc.name }}</a>
 									</li>
 								</ul>
 
 								<div class="form-group" ng-show="item.buckets.length > 0">
 									<label class="control-label">Related Topics</label>
 									<ul class="small">
-										<li ng-repeat="bucket in item.buckets track by bucket._id">{{ bucket.name }}</li>
+										<li ng-repeat="bucket in item.buckets track by bucket._id">{{ ::bucket.name }}</li>
 									</ul>
 								</div>
 
